--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,4738],[],[[4,0,0,[],[0,100,4638,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,25121],[],[[4,0,0,[],[1,136,24985],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ass5-2","*/Users/kimconu/Documents/robot-fw/tests/ass5-2.robot","*tests/ass5-2.robot","*Open Example Website","*No keyword with name 'Price.Convert Prices To List' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login test","*/Users/kimconu/Documents/robot-fw/assignment6/tests/Login_test.robot","*assignment6/tests/Login_test.robot","*User Can Login Successfully"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:05","fail":1,"id":"s1","label":"Ass5-2","name":"Ass5-2","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765474056955;
+window.output["baseMillis"] = 1765731545119;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4740;
+window.output["generated"] = 25125;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
