--- a/log.html
+++ b/log.html
@@ -2074,25 +2074,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,4738],[],[[4,0,0,[],[0,100,4638,5],[[0,6,7,0,8,9,0,0,[1,100,4096],[[101,2,10]]],[0,11,7,0,12,13,0,0,[1,4199,18],[]],[0,14,7,0,15,16,0,0,[1,4217,511],[[4218,2,17]]],[0,18,7,0,19,20,21,0,[1,4728,7],[[4735,2,22]]],[0,23,0,0,0,21,24,0,[0,4737,0],[[4737,5,5]]],[0,25,0,0,0,24,0,0,[3,4737,0],[]],[0,26,27,0,28,29,0,0,[3,4737,0],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,25121],[],[[4,0,0,[],[1,136,24985],[[0,5,6,0,0,7,0,0,[1,136,19313],[[0,8,9,0,10,11,0,0,[1,137,19312],[[137,2,12]]]]],[0,13,14,0,0,15,0,0,[1,19450,5670],[[0,16,14,0,0,17,0,0,[1,19451,4293],[[0,18,9,0,19,20,0,0,[1,19451,4166],[]],[0,21,9,0,22,23,0,0,[1,23617,127],[[23617,2,24]]]]],[0,25,14,0,0,26,0,0,[1,23744,71],[[0,18,9,0,19,27,0,0,[1,23744,13],[]],[0,21,9,0,22,28,0,0,[1,23757,58],[[23757,2,29]]]]],[0,30,14,0,0,31,0,0,[1,23815,1306],[[0,18,9,0,19,32,0,0,[1,23815,12],[]],[0,33,9,0,34,31,0,0,[1,23827,1293],[[23827,2,35]]]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ass5-2","*/Users/kimconu/Documents/robot-fw/tests/ass5-2.robot","*tests/ass5-2.robot","*Open Example Website","*No keyword with name 'Price.Convert Prices To List' found.","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    chrome","*Opening browser 'chrome' to base url '<a href=\"http://live.techpanda.org/index.php/mobile.html\">http://live.techpanda.org/index.php/mobile.html\x3c/a>'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*xpath=//img[@alt=\"Magento Commerce\"]    10s","*Select From List By Label","*<p>Selects options from selection list <code>locator\x3c/code> by <code>labels\x3c/code>.\x3c/p>","*xpath=//select[@title='Sort By']    Price","*Selecting options from selection list 'xpath=//select[@title='Sort By']' by label Price.","*Get WebElements","*<p>Returns a list of WebElement objects matching the <code>locator\x3c/code>.\x3c/p>","*xpath=//span[@class='price']","*${elements}","*${elements} = [&lt;selenium.webdriver.remote.webelement.WebElement (session=\"bd924d4d423e3be07901646403ca683e\", element=\"f.761AC728D027BE4BCA3CB09D3E03F3C2.d.EFBD08785CF224E498E831D212B576D1.e.53\")&gt;, &lt;selenium.webdriv...","*Price.Convert Prices To List","*${prices}","*Price.Verify Sorted Ascending","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Imported library '/Users/kimconu/Documents/robot-fw/resources/price_keywords.py' contains no keywords."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login test","*/Users/kimconu/Documents/robot-fw/assignment6/tests/Login_test.robot","*assignment6/tests/Login_test.robot","*User Can Login Successfully","*Go To URL","*common_keyword","*${BASE_URL}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL}    ${BROWSER}    browser_options=--allow-running-insecure-content --ignore-certificate-errors --disable-web-security","eNqlzMENwyAMAMBVrHx4Ff+rNCt0BiAuRgIbGWg6frtDB7h7dpIiGaLpNcjAJTZt5GAqxDAIllVwewA2ej02nrOPO6L+2NBliW4nNfVqQTKxtVre5JM2vChikZM+vnPHsCZj1VxkO/4/dgyH818LnERb","*Login With Valid Account","*LoginPage","*${VALID_USERNAME}    ${VALID_PASSWORD}","*Input Username","*${VALID_USERNAME}","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${LOGIN_USERNAME_INPUT}    10s","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOGIN_USERNAME_INPUT}    ${VALID_USERNAME}","*Typing text 'Admin' into text field 'xpath=//input[@name='username']'.","*Input Password","*${VALID_PASSWORD}","*${LOGIN_PASSWORD_INPUT}    10s","*${LOGIN_PASSWORD_INPUT}    ${VALID_PASSWORD}","*Typing text 'admin123' into text field 'xpath=//input[@name='password']'.","*Click Login","*${LOGIN_SUBMIT_BUTTON}","*${LOGIN_SUBMIT_BUTTON}    10s","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*Clicking button 'xpath=//button[@type='submit']'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:05","fail":1,"id":"s1","label":"Ass5-2","name":"Ass5-2","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[100,3,30]];
+window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765474056955;
+window.output["baseMillis"] = 1765731545119;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4740;
+window.output["generated"] = 25125;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
