--- a/log.html
+++ b/log.html
@@ -2074,25 +2074,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,25121],[],[[4,0,0,[],[1,136,24985],[[0,5,6,0,0,7,0,0,[1,136,19313],[[0,8,9,0,10,11,0,0,[1,137,19312],[[137,2,12]]]]],[0,13,14,0,0,15,0,0,[1,19450,5670],[[0,16,14,0,0,17,0,0,[1,19451,4293],[[0,18,9,0,19,20,0,0,[1,19451,4166],[]],[0,21,9,0,22,23,0,0,[1,23617,127],[[23617,2,24]]]]],[0,25,14,0,0,26,0,0,[1,23744,71],[[0,18,9,0,19,27,0,0,[1,23744,13],[]],[0,21,9,0,22,28,0,0,[1,23757,58],[[23757,2,29]]]]],[0,30,14,0,0,31,0,0,[1,23815,1306],[[0,18,9,0,19,32,0,0,[1,23815,12],[]],[0,33,9,0,34,31,0,0,[1,23827,1293],[[23827,2,35]]]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,7657],[],[[4,0,0,[],[1,144,7513],[[0,5,6,0,0,7,0,0,[1,145,5632],[[0,8,9,0,10,11,0,0,[1,145,5631],[[146,2,12]]]]],[0,13,14,0,0,15,0,0,[1,5777,1880],[[0,16,14,0,0,17,0,0,[1,5778,944],[[0,18,9,0,19,20,0,0,[1,5778,797],[]],[0,21,9,0,22,23,0,0,[1,6575,147],[[6575,2,24]]]]],[0,25,14,0,0,26,0,0,[1,6722,75],[[0,18,9,0,19,27,0,0,[1,6723,12],[]],[0,21,9,0,22,28,0,0,[1,6735,63],[[6735,2,29]]]]],[0,30,14,0,0,31,0,0,[1,6798,859],[[0,18,9,0,19,32,0,0,[1,6798,13],[]],[0,33,9,0,34,31,0,0,[1,6811,846],[[6811,2,35]]]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login test","*/Users/kimconu/Documents/robot-fw/assignment6/tests/Login_test.robot","*assignment6/tests/Login_test.robot","*User Can Login Successfully","*Go To URL","*common_keyword","*${BASE_URL}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL}    ${BROWSER}    browser_options=--allow-running-insecure-content --ignore-certificate-errors --disable-web-security","eNqlzMENwyAMAMBVrHx4Ff+rNCt0BiAuRgIbGWg6frtDB7h7dpIiGaLpNcjAJTZt5GAqxDAIllVwewA2ej02nrOPO6L+2NBliW4nNfVqQTKxtVre5JM2vChikZM+vnPHsCZj1VxkO/4/dgyH818LnERb","*Login With Valid Account","*LoginPage","*${VALID_USERNAME}    ${VALID_PASSWORD}","*Input Username","*${VALID_USERNAME}","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${LOGIN_USERNAME_INPUT}    10s","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOGIN_USERNAME_INPUT}    ${VALID_USERNAME}","*Typing text 'Admin' into text field 'xpath=//input[@name='username']'.","*Input Password","*${VALID_PASSWORD}","*${LOGIN_PASSWORD_INPUT}    10s","*${LOGIN_PASSWORD_INPUT}    ${VALID_PASSWORD}","*Typing text 'admin123' into text field 'xpath=//input[@name='password']'.","*Click Login","*${LOGIN_SUBMIT_BUTTON}","*${LOGIN_SUBMIT_BUTTON}    10s","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*Clicking button 'xpath=//button[@type='submit']'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login test","*/Users/kimconu/Documents/robot-fw/assignment6/tests/Login_test.robot","*assignment6/tests/Login_test.robot","*User Can Login Successfully","*Go To URL","*common_keyword","*${BASE_URL}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL}    ${BROWSER}    browser_options=--allow-running-insecure-content --ignore-certificate-errors --disable-web-security","eNqlzMENwyAMAMBVrHx4Ff+rNCt0BiAuRgIbGWg6frtDB7h7dpIiGaLpNcjAJTZt5GAqxDAIllVwewA2ej02nrOPO6L+2NBliW4nNfVqQTKxtVre5JM2vChikZM+vnPHsCZj1VxkO/4/dgyH818LnERb","*Login With Invalid Account","*LoginPage","*${INVALID_USERNAME}    ${INVALID_PASSWORD}","*Input Username","*${INVALID_USERNAME}","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${LOGIN_USERNAME_INPUT}    10s","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOGIN_USERNAME_INPUT}    ${VALID_USERNAME}","*Typing text 'invalidUser' into text field 'xpath=//input[@name='username']'.","*Input Password","*${INVALID_PASSWORD}","*${LOGIN_PASSWORD_INPUT}    10s","*${LOGIN_PASSWORD_INPUT}    ${VALID_PASSWORD}","*Typing text 'invalidPass' into text field 'xpath=//input[@name='password']'.","*Click Login","*${LOGIN_SUBMIT_BUTTON}","*${LOGIN_SUBMIT_BUTTON}    10s","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*Clicking button 'xpath=//button[@type='submit']'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765731545119;
+window.output["baseMillis"] = 1765731818240;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 25125;
+window.output["generated"] = 7660;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
