--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7657],[],[[4,0,0,[],[1,144,7513],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,24847],[],[[4,0,5,[],[1,131,24715],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login test","*/Users/kimconu/Documents/robot-fw/assignment6/tests/Login_test.robot","*assignment6/tests/Login_test.robot","*User Can Login Successfully"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Ass4","*/Users/kimconu/Documents/robot-fw/tests/ass4.robot","*tests/ass4.robot","*Open Example Website","*<p>This test opens rahulshettyacademy.com\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Ass4","name":"Ass4","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765731818240;
+window.output["baseMillis"] = 1765817951513;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7660;
+window.output["generated"] = 24855;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
